--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Jim Lin-Dybner",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "mongodb": "^5.6.0",
     "pug": "^3.0.2"
